# mytop

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: app.hpp  formatter.hpp  structs.hpp  system_monitor.hpp  ui.hpp
include/providers/: battery_provider.hpp  cpu_provider.hpp  disk_provider.hpp  gpu_provider.hpp  iprovider.hpp  memory_provider.hpp  process_provider.hpp  read_provider.hpp
src/: app.cpp  formatter.cpp  system_monitor.cpp  ui.cpp
src/providers/: battery_provider.cpp  cpu_provider.cpp  disk_provider.cpp  gpu_provider.cpp  memory_provider.cpp  process_provider.cpp
